player-ship-component and moving logic

--- a/src/app/components/space-field/space-field.component.html
+++ b/src/app/components/space-field/space-field.component.html
@@ -1,3 +1,4 @@
-<div class="starry-background" #stars >
+<div class="starry-background" (mousemove)="getCoords($event)">
   <div class="star" *ngFor="let i of fallingStars" [ngStyle]="i"></div>
 </div>
+<app-player-ship></app-player-ship>
