--- a/src/app/components/player-ship/player-ship.component.html
+++ b/src/app/components/player-ship/player-ship.component.html
@@ -1,1 +1,4 @@
-<div class="spaceship" [ngStyle]="coords" (click)="shoot($event)"></div>
+<div class="spaceship" [ngStyle]="coords">
+  <div class="laser"></div>
+</div>
+<div class="laser" *ngFor="let coord of coordsForFire" [ngStyle]="coord"></div>
