--- a/src/app/components/player-ship/player-ship.component.scss
+++ b/src/app/components/player-ship/player-ship.component.scss
@@ -8,3 +8,38 @@
   bottom: 0;
   left: 50%;
 }
+
+
+.laser {
+  width: 3px;
+  height: 15px;
+  background: #37ff00;
+  position: relative;
+  top: 55px;
+  border-radius: 20px;
+  animation: fire .8s linear;
+  box-shadow: 0 0 8px 5px rgba(0, 255, 0, 0.7);
+
+  &:after {
+    content: "";
+    width: 3px;
+    height: 15px;
+    background: #37ff00;
+    position: absolute;
+    left: 95px;
+    box-shadow: 0 0 8px 5px rgba(0, 255, 0, 0.7);
+
+  }
+}
+
+
+@keyframes fire {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-100vh);
+    opacity: .8;
+  }
+}
