new shooting logic

--- a/src/app/components/player-ship/player-ship.component.html
+++ b/src/app/components/player-ship/player-ship.component.html
@@ -1,4 +1,2 @@
-<div class="spaceship" [ngStyle]="coords">
-  <div class="laser"></div>
-</div>
+<div class="spaceship" [ngStyle]="coords"></div>
 <div class="laser" *ngFor="let coord of coordsForFire" [ngStyle]="coord"></div>
