--- a/src/app/components/asteroid/asteroid.component.html
+++ b/src/app/components/asteroid/asteroid.component.html
@@ -1,4 +1,1 @@
-<div class="asteroid" *ngFor="let item of asteroids; index as i" [ngStyle]="item" [style.left.px]="positionX"
-     [style.top.px]="positionY">
-  <div #item>Пук</div>
-</div>
+<div class="asteroid" *ngFor="let item of asteroids;" [ngStyle]="item"></div>
