--- a/src/app/components/player-ship/player-ship.component.scss
+++ b/src/app/components/player-ship/player-ship.component.scss
@@ -1,5 +1,4 @@
 
-
 .spaceship {
   background: url("../../../assets/img/ship1.webp") no-repeat center/cover;
   width: 100px;
@@ -11,14 +10,20 @@
 
 
 .laser {
-  width: 3px;
-  height: 15px;
-  background: #37ff00;
+  display: inline;
   position: relative;
-  top: 55px;
-  border-radius: 20px;
-  animation: fire .8s linear;
-  box-shadow: 0 0 8px 5px rgba(0, 255, 0, 0.7);
+
+  &::before {
+    content: "";
+    width: 3px;
+    height: 15px;
+    background: #37ff00;
+    position: absolute;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    box-shadow: 0 0 8px 5px rgba(0, 255, 0, 0.7);
+  }
 
   &:after {
     content: "";
@@ -26,20 +31,12 @@
     height: 15px;
     background: #37ff00;
     position: absolute;
-    left: 95px;
+    border: none;
+    outline: none;
+    border-radius: 20px;
     box-shadow: 0 0 8px 5px rgba(0, 255, 0, 0.7);
-
+    left: 95px;
   }
 }
 
 
-@keyframes fire {
-  0% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-100vh);
-    opacity: .8;
-  }
-}
