--- a/src/app/components/asteroid/asteroid.component.scss
+++ b/src/app/components/asteroid/asteroid.component.scss
@@ -6,4 +6,17 @@
   position: absolute;
   top: 0;
   animation: fall 2s linear;
+  z-index: 0;
+  cursor: none;
+  pointer-events: none;
+  &:hover {
+    cursor: none;
+  }
+
+}
+div {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
